--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,4 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^/.]+)$ index.php?c=$1
 RewriteRule ^([^/.]+)/([^/.]+)$ index.php?c=$1&m=$2
 RewriteRule ^([^/.]+)/([^/.]+)/([^/.]+)$ index.php?c=$1&m=$2&a=$3
+RewriteRule ^([^/.]+)/([^/.]+)/([^/.]+)/([^/.]+)$ index.php?c=$1&m=$2&a=$3&v=$4
