Adjusted htaccess. index now figures out if site is using clan or not. Got rid of all the global variables and changed to a pass-by-reference.

--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,5 @@
 RewriteEngine On 
-RewriteBase /zclan/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^([^/.]+)$ index.php?c=$1
-RewriteRule ^([^/.]+)/([^/.]+)$ index.php?c=$1&m=$2
-RewriteRule ^([^/.]+)/([^/.]+)/([^/.]+)$ index.php?c=$1&m=$2&a=$3
-RewriteRule ^([^/.]+)/([^/.]+)/([^/.]+)/([^/.]+)$ index.php?c=$1&m=$2&a=$3&v=$4
+RewriteRule (.*)$ index.php?c=$1
